--- a/public/libs/css/custom.css
+++ b/public/libs/css/custom.css
@@ -1,3 +1,8 @@
+ body {           
+      background: #e96443; /*  For browsers that do not support gradients */ 
+      background: linear-gradient(to left,#e96443,#904e95);
+        }
+
 .glyphicon
 {
     margin-right:4px !important; /*override*/
