--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,23 +3,20 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>What you wanna before you die</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="/images/favicon.png" type="image/x-icon">
+    <title>Say your heart out ...</title>
+    <meta name='viewport' content='user-scalable=no'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     
     <link rel="stylesheet" href="/libs/css/bootstrap.min.css"/>  
     <link rel="stylesheet" href="/libs/css/font-awesome.min.css"/>  
     <link rel="stylesheet" href="/libs/css/custom.css"/>  
-    <link rel="stylesheet" href="/libs/css/toaster.min.css"/>  
+    <link rel="stylesheet" href="/libs/css/toaster.min.css"/>      
     
-    <!--<script src="/libs/js/jquery-3.0.0.min.js" type="text/javascript"></script>-->
-    <script src="/libs/js/jquery.min.js" type="text/javascript"></script>
-	<!--<script src="/libs/js/newsbox.min.js" type="text/javascript"></script>-->
-    <script src="/libs/js/jquery.bootstrap.newsbox.min.js" type="text/javascript"></script>
-    
+    <script src="/libs/js/jquery.min.js" type="text/javascript"></script>	
+    <script src="/libs/js/jquery.bootstrap.newsbox.min.js" type="text/javascript"></script>  
     <script src="/libs/js/angular.min.js" type="text/javascript"></script>
-    <script src="/libs/js/main.js" type="text/javascript"></script>
-    
+    <script src="/libs/js/main.js" type="text/javascript"></script>    
     <script src="/libs/js/spin.min.js" type="text/javascript"></script>
     <script src="/libs/js/angular-spinner.min.js" type="text/javascript"></script>    
 </head>
@@ -35,16 +32,12 @@
 			
           <div class="panel panel-default">
 			<div class="panel-heading">
-				<span class="glyphicon glyphicon-list-alt"></span>
-                <span><b> What you wanna do before you die ...</b></span>
+				<span class="glyphicon glyphicon-envelope"></span>
+                <span><b>So what you wanna do before you die ...</b></span>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                
                 <span><a href="/"><span class="glyphicon glyphicon-refresh"></span>Load messages</a></span>
             </div>
 			<div class="panel-body fixed-panel" >
@@ -125,6 +118,15 @@
       </div>            
      </div>  
         
+        <br/>
+        <div class="row">
+         <span>  
+          <span style="font-weight:bold;">
+            Made with the help of <span style="text-decoration:line-through">5 </span>15 cups of coffee by
+          </span>            
+          <a style="color:white" href="https://twitter.com/alammahtab08" target="_blank">@alammahtab08</a>
+        </span>
+       </div>
         
 </div>
 
