changed last span tag

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -121,12 +121,12 @@
         
         <br/>
         <div class="row">
-         <span>  
+         <div class="col-md-12">  
           <span style="font-weight:bold;">
             Made with the help of <span style="text-decoration:line-through">5 </span>15 cups of coffee by
           </span>            
           <a style="color:white" href="https://twitter.com/alammahtab08" target="_blank">@alammahtab08</a>
-        </span><br/>
+        </div><br/>
        </div>
         
 </div>
