--- a/public/libs/css/custom.css
+++ b/public/libs/css/custom.css
@@ -13,6 +13,18 @@
     margin-right:0px !important; /*override*/
 }
 
+@media screen and (min-width: 768px){
+            .rwd-break { display: none; }
+        }
+
+@media (max-width: 768px){ 
+
+    .btn-primary{
+        margin-top: 10px;
+        margin-bottom: 5px;
+    }
+}
+
 .pagination a
 {
     color:#555;
