--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,7 +49,7 @@
                  </div> 
                   
 				<div class="col-xs-12">					
-                  <ul class="demo1"> 
+                  <ul ng-cloak class="demo1"> 
                         
                    <li class="news-item" ng-repeat="item in records" on-last-element>
 					<table>
